# mock_data_generator

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
generator/: generate.py
mock_data_generator/generator/: generate.py  predefined.py
mock_data_generator/utils/: constants.py
schema_handler/: schema_validator.py
scripts/: run_tests.sh
tests/: fileutils_test.py  schema_validator_test.py
utils/: fileutils.py
