[metadata]
name = mock_data_generator
version = 1.2.8
author = Rahul Auti
author_email = rahulsmtauti@gmail.com
description = Help data engineers and data developers to generate the mock data based on the json schema file supplied.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/autirahul/mock_data_generator
classifiers =
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = ^3.10
include_package_data = True
